Added final and constant init, removed smells